TP_11_LA_4A_(Terminado)

--- a/TP_11/index.html
+++ b/TP_11/index.html
@@ -6,23 +6,17 @@
     <title>CHES</title>
 </head>
 <body>
-    <header class="header">
+    <header>
         <div class="logo">
-            <a href="index.html"><img src="./img/minecraft.jpeg" alt="logo de la marco"></a>
+            <a href="index.html"><img class="imgen" src="./img/minecraft.jpeg" alt="logo de la marco"></a>
         </div>
-       <nav>
-            <ul class="nav-links">
-                <li><a class="lu" href="repartidores.html">Repartidores</a></li>
-                <li><a class="lu" href="projects.html">projects</a></li>
-                <li><a class="lu" href="about.html">About</a></li>
-            </ul>
-       </nav>
-       <a class="btn" href="#"><button>contact</button></a>
+        <div class="nav-links">
+            <a class="lu" href="repartidores.html">Repartidores</a>
+            <a class="lu" href="historia.html">Historia</a>
+        </div>
     </header>
     <div class="divH">
-        <p class="p">
-        Mercaderias La Libertad de Comer Bien
-        </p>
+        <h1 class="peso">La Mesa de Cubos</h1>
         <br>      
         <p class="p">
          Tienda de Sandwiches:  
