--- a/TP_11/repartidores.html
+++ b/TP_11/repartidores.html
@@ -6,18 +6,14 @@
     <link rel="stylesheet" href="repartidores.css">
 </head>
 <body>
-    <header class="header">
+    <header>
         <div class="logo">
-            <a href="index.html"><img src="./img/minecraft.jpeg" alt="logo de la marco"></a>
+            <a href="index.html"><img class="imgen" src="./img/minecraft.jpeg" alt="logo de la marco"></a>
         </div>
-       <nav>
-            <ul class="nav-links">
-                <li><a class="lu" href="repartidores.html">Repartidores</a></li>
-                <li><a class="lu" href="projects.html">projects</a></li>
-                <li><a class="lu" href="about.html">About</a></li>
-            </ul>
-       </nav>
-       <a class="btn" href="#"><button>contact</button></a>
+        <div class="nav-links">
+            <a class="lu" href="repartidores.html">Repartidores</a>
+            <a class="lu" href="historia.html">Historia</a>
+        </div>
     </header>
     <div class="bodi">
         <div class="ches">
@@ -77,6 +73,28 @@
                 <img class="img" src="./img/Estrella_amarilla.png" alt="">
                 <img class="img" src="./img/Estrella_amarilla.png" alt="">
             </div>
+        </div>
+
+        <div class="ches">
+            <p>Slime</p>
+                <img class="repartidor" src="./img/slime.jpg" alt="">
+            <div>
+                <img class="img" src="./img/Estrella_amarilla.png" alt="">
+                <img class="img" src="./img/Estrella_amarilla.png" alt="">
+                <img class="img" src="./img/Estrella_amarilla.png" alt="">
+            </div>
+        </div>
+
+        <div class="ches">
+            <p>Whither</p>
+                <img class="repartidor" src="./img/whither.png" alt="">
+            <div>
+                <img class="img" src="./img/Estrella_amarilla.png" alt="">
+                <img class="img" src="./img/Estrella_amarilla.png" alt="">
+                <img class="img" src="./img/Estrella_amarilla.png" alt="">
+                <img class="img" src="./img/Estrella_amarilla.png" alt="">
+            </div>
+            
         </div>
         
     </div>
